version/0.25/_sources/api/solver/_autosummary/settings/flow_velocity.rst.txt
:orphan:

.. _flow_velocity:

flow_velocity
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.flow_velocity.flow_velocity
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`multiphase <multiphase_6>`       Help not available.

================================   =======================

