version/0.27/_sources/api/solver/_autosummary/settings/flow_velocity.rst.txt
:orphan:

.. _flow_velocity:

flow_velocity
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.flow_velocity
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`flow_velocity_child <flow_velocity_child>`


.. rubric:: Included in:

==================================   ============================================================

Parent                                                                                    Summary

==================================   ============================================================
:ref:`multiphase_6 <multiphase_6>`       Allows to change multiphase model variables or settings.

==================================   ============================================================

